import "ecs_ids.proto";

package ECS;

option java_package = "org.tizen.ecp.msg.genmsg.ecs";

// ======= Messages =======

message CheckVersionReq {
	required string version_str = 1;
}

message CheckVersionAns {
	required int32 errcode = 1;
	required string version_str = 2;
}

message KeepAliveReq {
	optional string time_str = 1;
}

message KeepAliveAns {
	optional string time_str = 1;
}

message InjectorReq {
	required string category = 1;
	required int32 length = 2;
	required int32 group = 3;
	required int32 action = 4; 
	optional bytes data = 5;
}

message InjectorAns {
	required int32 errcode = 1;
	optional string errstr = 2;
	required string category = 3;
	required int32 length = 4;
	required int32 group = 5;
	required int32 action = 6; 
	optional bytes data = 7;
}

message InjectorNtf {
	required string category = 1;
	required int32 length = 2;
	required int32 group = 3;
	required int32 action = 4; 
	optional bytes data = 5;
}

message DeviceReq {
	required string category = 1;
	required int32 length = 2;
	required int32 group = 3;
	required int32 action = 4; 
	optional bytes data = 5;
}

message DeviceAns {
	required int32 errcode = 1;
	optional string errstr = 2;
	required string category = 3;
	required int32 length = 4;
	required int32 group = 5;
	required int32 action = 6; 
	optional bytes data = 7;
}

message DeviceNtf {
	required string category = 1;
	required int32 length = 2;
	required int32 group = 3;
	required int32 action = 4; 
	optional bytes data = 5;
}

message MonitorReq {
	required string command = 1;
}

message MonitorAns {
	required int32 errcode = 1;
	optional string errmsg = 2;
	required string command = 3;
	optional bytes data = 4;
}

message MonitorNtf {
	required string command = 1;
	optional bytes data = 2;
}

// ======= Extensions messages =======

message NfcReq {
	required string category = 1;
	optional bytes data = 2;
}

message NfcNtf {
	required string category = 1;
	optional bytes data = 2;
}

// ======= Main master message =======

message Master {
	required Master_Type type = 1;

	optional CheckVersionReq checkversion_req = 2;
	optional CheckVersionAns checkversion_ans = 3;
	
	optional KeepAliveReq keepalive_req = 4;
	optional KeepAliveAns keepalive_ans = 5;
	
	optional InjectorReq injector_req = 6;
	optional InjectorAns injector_ans = 7;
	optional InjectorNtf injector_ntf = 8;
	
	optional DeviceReq device_req = 9;
	optional DeviceAns device_ans = 10;
	optional DeviceNtf device_ntf = 11;

	optional MonitorReq monitor_req = 12;
	optional MonitorAns monitor_ans = 13;
	optional MonitorNtf monitor_ntf = 14;

	// Extensions 101 to 150;
	optional NfcReq nfc_req = 101;
	optional NfcNtf nfc_ntf = 102;
}


